feat(media): Douyin extract/analyze/proxy/download 迁入 intelligence + 修复 9def15e 遗留编译基线（GL-P3-MEDIA-001）
Douyin 媒体链路（EDGE_ROUTE_DOUYIN_MEDIA_INTELLIGENCE，默认 false 回落 legacy）：
- 修复 9def15e 遗留脚手架：DouyinResolveService 原为 stub（把页面 URL 当可播放
  地址），完整移植 legacy douyin-resolve 匿名 HTTP 三段（desktop→规范化桌面视频页
  →移动分享页；meta/分享描述、JSON 片段权重排序、时长结构化+regex 兜底、
  playwm/play/download 播放源抽取、挑战页检测）；HTTP 阶段解析不出可播放地址时
  整请求回落 legacy（Playwright/session 仍 Node worker）。extract 响应补齐前端
  强校验的 downloadAudioUrl/usedSession/fetchStage（上一版违反 useDouyinParse
  契约），去掉多余的 playbackMode。token/fetch 属性接入 application.yml（原未接，
  运行时 secret=null 必 500），TTL 15min 对齐 legacy，parse 兼容 legacy 无 kind
  token（切流窗口互通），proxy 上游头固定 Origin（对齐 legacy streamDouyinVideo）。
- analyze-video short analyze（新增）：镜像 Bilibili Stage 5——Java 路径 ⟺
  progressive+≤60s+qwen+PUBLIC_BACKEND_ORIGIN，intelligence 扣 video_analysis +
  上游失败退款（GL-P0-BILL-002）；超阈值/非 qwen 整体回落 legacy（透传 Cookie，
  legacy 自行扣分 + FFmpeg 切片/analysis-media）。audio/analysis-media/session
  不路由（始终 legacy）。
- 提示词/归一提升为平台级 mediaplatform/VideoAnalysisPrompts +
  VideoAnalysisResultNormalizer（原 Bilibili 命名类迁入，双平台单一副本防漂移）。
- 限流对齐 legacy app.ts：DouyinAnalyzePreflightFilter（登录 20/60s）+
  DouyinExtractPreflightFilter（匿名 IP 最右一跳 20/60s）。
- edge-bff 新增 analyze-video 精确路由；compose 显式注入 DOUYIN 媒体/热点 flag
  与 DOUYIN_ANALYSIS_* 变量。

基线修复（9def15e 起 intelligence-service 无法编译/装配，本轮一并修）：
- ai/byok+ai/run 33 处编译错误：单文件多 public record 拆文件、补
  spring-boot-starter-validation、补 UUID/Flux import、R2DBC bindNull→
  Parameter.fromOrEmpty、map→(Row,RowMetadata)、fetch().one()。
- EnvelopeEncryption 未接线：CryptoAutoConfiguration 补 @Bean + 新增
  CryptoKekConfiguredCondition（@ConditionalOnProperty 对空串仍匹配，会拖垮
  未用 BYOK 的上下文）；/api/ai/keys @Conditional fail-closed（无 KEK→404，
  同视频生成能力 gate 口径）；AiExecutionService 移除未使用注入。
- repository text-block SQL 行尾空格被吃（SELECTid::text 坏 SQL）改普通拼接；
  null-org bind 修复；重复密钥→409；重写 AiProviderKeyControllerIT（org 来自
  断言而非请求体）。

验证：intelligence 406 tests + edge-bff 60 tests + platfor